# affine

./: CMakeLists.txt
include/: affine.h  comparisons.h  intersection.h
include/affine/: affine.h  affine_space.h  comparisons.h  intersection.h
include/affine/detail/: intersection_detail.h
include/detail/: affine_detail.h  intersection_detail.h
tests/: constructor_test.cpp  element_test.cpp  intersection_test.cpp  spanning_space_test.cpp  test_utils.h
